<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Search</string>
    <string name="search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter Search Term</string>
    <string name="default_text">Text</string>
    <string name="title_activity_display">Display Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="image_size_prompt">Image Size</string>
    <string name="file_type_prompt">File Type</string>
    <string name="image_type_prompt">Image Type</string>
    <string name="site_prompt">Site</string>
    <string name="settings_submit">Submit</string>
    <string name="empty_result_message">Empty result set returned, please check your settings</string>
    <string name="newline_in_site">Site contains newline, please re-enter</string>

</resources>
