<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yahoo.learn.android.imagesearch.activities.SettingsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size_prompt"
        android:id="@+id/tvImageSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:minHeight="30dp"
        android:minWidth="100dp" />

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="wrap_content"
        android:entries="@array/image_size_options"
        android:prompt="@string/image_size_prompt"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/tvImageSize"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignBottom="@id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type_prompt"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:layout_toStartOf="@+id/spImageSize"
        android:maxLines="1"
        android:minHeight="30dp"
        android:layout_toLeftOf="@+id/spImageSize" />

    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="wrap_content"
        android:entries="@array/image_type_options"
        android:prompt="@string/image_type_prompt"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tvImageType"
        android:layout_toRightOf="@id/tvImageType"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignBottom="@id/tvImageType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_type_prompt"
        android:id="@+id/tvFileType"
        android:layout_below="@+id/tvImageType"
        android:layout_marginTop="5dp"
        android:layout_alignEnd="@id/tvImageSize"
        android:layout_alignRight="@id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:minHeight="30dp"
        />

    <Spinner
        android:id="@+id/spFileType"
        android:layout_width="wrap_content"
        android:entries="@array/file_type_options"
        android:prompt="@string/file_type_prompt"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvFileType"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignBottom="@id/tvFileType"
        android:layout_alignTop="@+id/tvFileType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_prompt"
        android:id="@+id/tvSite"
        android:layout_below="@+id/tvFileType"
        android:layout_marginTop="5dp"
        android:layout_alignEnd="@id/tvImageSize"
        android:layout_alignRight="@id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:minHeight="30dp"
        />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tvSite"
        android:layout_toRightOf="@id/tvSite"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
        android:layout_alignBottom="@id/tvSite"
        android:hint="@string/site_prompt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_submit"
        android:id="@+id/btnSettingsSubmit"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/etSite"
        android:onClick="settingsSubmit"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
